lisätty rekisteröinti herokua varten

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,13 @@
         <input id=button type="submit" value="Kirjaudu">
     </form>
 </div>
+<nav>
+    <ul>
+        <li>
+            <a href="/register"> rekisteröidy</a>
+        </li>
+    </ul>
+</nav>
 
 {% endif %}
 
