--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,11 @@
 <link rel="stylesheet" href="/static/style.css">
 <div>
     <form action="/register" method="post">
-        <label for="username">Tunnus:</label>
-        <input type="text" name="username">
-        <label for="password">Salasana:</label>
-        <input type="password" name="password1">
-        <label for="password">Salasana uudestaan:</label>
+        <div><label for="username">Tunnus:</label></div>
+        <div><input type="text" name="username"></div>
+        <div><label for="password">Salasana:</label></div>
+        <div><input type="password" name="password1"></div>
+        <div><label for="password">Salasana uudestaan:</label></div>
         <input type="password" name="password2">
         <input type="submit" value="Luo tunnus">
     </form>
