päivvitys pelin luontiin ja uusi taulukko

--- a/templates/games.html
+++ b/templates/games.html
@@ -17,9 +17,9 @@
             <div class="team">{{ P[0] }} / {{ P[1] }}</div>
             <div class="team">{{ P[2] }} / {{ P[3] }}</div>     
             <div class="score">
-                <input type="hidden" id="hide" name="P1" value= "{{ P[0] }}">
-                <input type="hidden" id="hide" name="P2" value= "{{ P[1] }}">
-                <select id="scorewheel" name="{{ P[4] }}">
+                <input type="hidden" id="hide" name="gamedata" value= "{{ P[0] }}">
+                <input type="hidden" id="hide" name="gamedata" value= "{{ P[1] }}">
+                <select id="scorewheel" name="gamescore">
                     <option value="0" selected> 0
                     <option value="1"> 1
                     <option value="2"> 2
@@ -31,9 +31,9 @@
                 </select>
             </div>
             <div class="score">
-                <input type="hidden" id="hide" name="P3" value= "{{ P[2] }}">
-                <input type="hidden" id="hide" name="P4" value= "{{ P[3] }}">
-                <select id="scorewheel" name="{{ P[5] }}">
+                <input type="hidden" id="hide" name="gamedata" value= "{{ P[2] }}">
+                <input type="hidden" id="hide" name="gamedata" value= "{{ P[3] }}">
+                <select id="scorewheel" name="gamescore">
                     <option value="0" selected> 0
                     <option value="1"> 1
                     <option value="2"> 2
