--- a/templates/games.html
+++ b/templates/games.html
@@ -8,8 +8,8 @@
         <h1>Paistilan Padel</h1>
     </div>
     <div class="dayscores">
-        <div>Pelaaja</div>
-        <div>Tulos</div>
+        <div>Joukkue 1</div>
+        <div>Joukkue 2</div>
     </div>
     <form action="/stats" method="POST">
 {% for P in playerchart %}
