--- a/templates/dayscores.html
+++ b/templates/dayscores.html
@@ -3,5 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/static/style.css">
 
-<div class="scoreboard">{{ pelaajat }}</div>
-<div class="scoreboard">{{ tulokset }}</div>
+<div><h2>Päivän tulokset</h2></div>
+<br>
+<div class="scoreboard">{{ day_podium }}</div>
+<br>
+<div><nav><a href="/">Palaa etusivulle</a></nav></div>
