--- a/templates/games.html
+++ b/templates/games.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<title>Paistilan Padel</title>
+<title>Pelit</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/static/style.css">
 
 <body>
-    <div class="header">
-        <h1>Paistilan Padel</h1>
-    </div>
-    <div class="dayscores">
-        <div>Joukkue 1</div>
-        <div>Joukkue 2</div>
-    </div>
     <form action="/stats" method="POST">
-{% for P in playerchart %}
+    {% for r in range(rounds) %}
+        <div><h2>Kierros {{ r+1 }}</h2></div>
+        {% for P in playerchart %}
         <div class="scoreboard">  
             <div class="team">{{ P[0] }} / {{ P[1] }}</div>
             <div class="team">{{ P[2] }} / {{ P[3] }}</div>     
@@ -45,17 +40,12 @@
                 </select>
             </div>
         </div>
-{% endfor %}    
+        {% endfor %}  
+    {% endfor %}    
         <div class="scorebutton">
             <input id="scorebutton" type="submit" value="Tallenna päivän tulokset">
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </div>
     </form>
-    
-
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Lopeta ja ilman tallennusta</a>
-            </li>
-        </ul>
-    </nav>
+    <nav><a href="/">Lopeta ja ilman tallennusta</a></nav>
+</body>
