--- a/templates/games.html
+++ b/templates/games.html
@@ -47,5 +47,5 @@
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </div>
     </form>
-    <nav><a href="/">Lopeta ja ilman tallennusta</a></nav>
+    <nav>><h2><a href="/">Lopeta ja ilman tallennusta</a></h2></nav>
 </body>
