--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<title>Paistilan Padel - Rekisteröidy</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/static/style.css">
+
+<div class="header">
+    <h1>Paistilan Padel</h1>
+</div>
 <h2>{{ message }}</h2>
 <div>
     <form action="/register" method="post" class="login">
