--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,10 +8,10 @@
         <h1>Paistilan Padel</h1>
     </div>
     <div class="navbanner">
-        <div><a class ="navlinks" href="/">Etusivu</a></div>
-        <div><a class ="navlinks" href="/stats">Tilastot</a></div>
-        <div><a class ="navlinks" href="/playerapp">Pelaajat</a></div>
-        <div><a class ="navlinks" href="/register">Rekisteröidy</a></div>
+        <a class ="navlinks" href="/">Etusivu</a>
+        <a class ="navlinks" href="/stats">Tilastot</a>
+        <a class ="navlinks" href="/playerapp">Pelaajat</a>
+        <a class ="navlinks" href="/register">Rekisteröidy</a>
     </div>
 {% if session.user_id %}
 
