--- a/templates/players.html
+++ b/templates/players.html
@@ -9,6 +9,13 @@
     </div>
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
+<form action="/playerdel" method="POST" class="playeradd" onsubmit="checkplayer(this)">
+    <div>Poista: (tulossa) <input id ="username" type="text" name="del_player" minlength="4" maxlength="10" pattern="[A-Za-z]+" placeholder="vain kirjaimia" required>
+        <input id ="button" type="submit" value="Poista">
+    </div>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+</form>
+
 
 <script src="{{url_for('static', filename='jschecks.js')}}"></script>
 
