--- a/static/style.css
+++ b/static/style.css
@@ -20,18 +20,16 @@ body {
 
 h2 {
     text-align: center;
-    margin: 1.5em 1em .5em 1em;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
 }
 
 .login {
     margin: 12px;
     padding: .5em;
-    background: blanchedalmond;
+    text-align: center;
     border-radius: .5em;
-    display: inline-block;
-}
+ }
 .dayscores{
     background: rgb(255, 96, 96, 0.562);
     margin: 12px;
@@ -81,11 +79,10 @@ h2 {
     border-radius: .5em;
 }
 .playeradd{
-    background-color: bisque;
     border-radius: .5em;
-    margin: 12px;
-    padding: 1em;
+    padding: .5em 0em .5em .5em;
     font-size: 0.8em;
+    text-align: center;
 
 }
 
@@ -93,18 +90,40 @@ h2 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     font-family: 'Quicksand', sans-serif;
+    margin: 12px;
 }
 
-.navlinks{
+.navlinks1{
     border-radius: .5em;
     text-align: center;
     background: bisque;
     padding: .5em;
-    margin: .5em 12px;
+    margin: .5em .5em .5em 0em;
+}
+.navlinks2{
+    border-radius: .5em;
+    text-align: center;
+    background: bisque;
+    padding: .5em;
+    margin: .5em;
+}
+.navlinks3{
+    border-radius: .5em;
+    text-align: center;
+    background: bisque;
+    padding: .5em;
+    margin: .5em;
+}
+.navlinks4{
+    border-radius: .5em;
+    text-align: center;
+    background: bisque;
+    padding: .5em;
+    margin: .5em 0em .5em .5em;
 }
 
 .score {
-    padding: unset;
+    margin: .5em;
     text-align: center;
 }
 
@@ -113,17 +132,16 @@ h2 {
     text-align: center;
     background-color: bisque;
     border-radius: .5em;
-    margin: 1em 3em 1em 3em;
+    margin: auto;
     padding: 1em;
     font-size: 0.8em;
+    width: 9.5em;
 
 }
 
 .rounds{
     text-align: center;
-    background-color: bisque;
     border-radius: .5em;
-    margin: 12px;
     padding: .7em;
     font-size: 1em;
 }
@@ -147,7 +165,7 @@ form #scorebutton{
 }   
 
 form #scorewheel {
-    font-size: 1.5em;
+    font-size: 1.2em;
     padding: .2em;
 
 }
@@ -168,7 +186,6 @@ form #gamestart{
 form #button {
     padding: 4px;
     border-radius: .5em;
-    border: none;
     text-align: center;
     width: 6em;
     background: tan;
@@ -196,6 +213,7 @@ form #button:hover{
     background: antiquewhite;
     padding: 1em;
     margin: 0.7em 1em;
+    font-size: .9em;
 }
 
 #hide{
@@ -206,18 +224,16 @@ form #button:hover{
 form #username{
     background: whitesmoke;
     padding: .3em;
-    width: 12em;
     border-radius: .5em;
-    margin: 0.2em .5em .5em 0em;
+    margin:.5em;
 
 }
 
 form #password{
     background: whitesmoke;
     padding: .3em;
-    width: 12em;
     border-radius: .5em;
-    margin: 0.2em .5em .5em 0em;
+    margin: .5em;
 
 
 }
