--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,10 +8,10 @@
         <h1>Paistilan Padel</h1>
     </div>
     <div class="navbanner">
-        <a class ="navlinks" href="/">Etusivu</a>
-        <a class ="navlinks" href="/stats">Tilastot</a>
-        <a class ="navlinks" href="/playerapp">Pelaajat</a>
-        <a class ="navlinks" href="/register">Rekisteröidy</a>
+        <a class ="navlinks1" href="/">Etusivu</a>
+        <a class ="navlinks2" href="/stats">Tilastot</a>
+        <a class ="navlinks3" href="/playerapp">Pelaajat</a>
+        <a class ="navlinks4" href="/register">Tunnus</a>
     </div>
 {% if session.user_id %}
 
@@ -21,16 +21,18 @@
     <nav><h2><a href="/logout">Lopeta ja kirjaudu ulos</a></h2></nav>
 {% else %}
 
-<p>{{ message }}</p><br>
+<p>{{ message }}</p>
 <div class="login">
     <form action="/login" method="post">
         <div><label for="username">Tunnus:</label></div>
         <div><input type="text" id = "username" name="username" placeholder="Syötä tunnus" required></div>
         <div><label for="password">Salasana:</label></div>
         <div><input type="password" id = "password" name="password" placeholder="Syötä salasana" required></div>
-        <div><input id=button type="submit" value="Kirjaudu"></div>
+        <div><input id="button" type="submit" value="Kirjaudu"></div>
     </form>
 </div>
+
+{% block registercontent %}{% endblock %}
 
 {% endif %}
 
