--- a/templates/seasonstats.html
+++ b/templates/seasonstats.html
@@ -3,6 +3,8 @@
 {% block content %}
 
 <div><h2>KAUSITILASTO</h2></div>
+<div><h2>PÄIVÄTILASTOT (tulossa)</h2></div>
+
 
 <div class="podiumboard">
     {% for p in podium %}
